--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <html>
+<html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,10 +11,11 @@
 
   <body>
   
-    
-    <h1>
-      Cardapio Virtual
-    </h1>
+    <div class="titulo"> 
+        <h1>
+          Cardapio Virtual
+        </h1>
+    </div>
    
     <div class="div-odin"> 
     
